--- a/stages.html
+++ b/stages.html
@@ -24,9 +24,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-              </li><li class="nav-item dropdown">
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Projet
                 </a>
@@ -116,8 +114,10 @@
           <div class="hero__left__wrapper">
             <h1 class="hero__heading" style="color: #3f2045;">Entreprise : <br>Élite Déménagement</h1>
             <p class="hero__info" style="font-size: medium; color: #3f2045;">
-                Lors de mon premier stage en première année de BTS, j'ai eu l'opportunité de mettre en pratique mes compétences en HTML, CSS et PHP dans une entreprise. 
-                <br>Cette expérience m'a permis de découvrir de nouveaux outils tels que : "le tableau des tâches", un tableau blanc où sont inscrites les tâches à réaliser et réunions, qui m'a permis d'organiser et de suivre plus efficacement les différentes tâches que j'avais à réaliser. J'ai également appris les bases du SEO (Search Engine Optimization) pour optimiser le référencement des pages web de l'entrepriseavec une formation openclassrooms. Cela m'a permis de connaitre différent outilles comme : KWFinder, Google Analytics et google search console. Enfin, j'ai découvert Git Hub, une plateforme de gestion de versions de code source, qui m'a permis de travailler en équipe plus efficacement. <br>Ces compétences acquises lors de ce stage ont été précieuses pour la suite de mes études et pour ma future carrière professionnelle. </p>
+              Lors de mon premier stage, j'ai eu l'opportunité de mettre en pratique mes compétences en HTML, CSS et PHP dans une entreprise.
+Cette expérience m'a permis de découvrir de nouveaux outils tels que : Trello où sont inscrites les tâches à réaliser et les réunions, cela m'a permis d'organiser et de suivre plus efficacement les différentes tâches que je devais réaliser. J'ai également appris les bases du SEO (Search Engine Optimization) pour optimiser le référencement des pages web de l'entreprise avec une formation openclassrooms. Cela m'a permis de connaitre différent outilles comme : KWFinder, Google Analytics et google search console. Enfin, j'ai découvert Git Hub, une plate-forme de gestion de versions de code source, qui m'a permis de partager mon code en équipe plus efficacement.
+Ces compétences acquises lors de ce stage ont été précieuses pour la suite de mon cursus et pour ma future carrière professionnelle.
+
             <div class="button__wrapper" style="padding-bottom: 35px;">
               <a href="https://github.com/NassimDevNum/StageDemenagement" class="btn" style=" width: 200px; background-color: #3f2045; color: #d8cbe1;">Voir Le code source</a>
             </div>
@@ -177,22 +177,24 @@
   </section>
 
 
-  <section sty="background-color: #d8cbe1; padding-bottom: 50px;;">
+  <section sty="background-color: #d8cbe1">
     <div class="container">
       <div class="hero__wrapper">
         <div class="hero__left" data-aos="fade-left">
 
           <div class="hero__left__wrapper">
-            <h1 class="hero__heading" >Le BTS SIO C'est quoi ?</h1>
-            <p class="hero__info" style="font-size: medium;" >À la rentrée de ma deuxième année de BTS, j'ai eu l'opportunité de réaliser un stage au sein du groupe IPF qui m'a permis d'approfondir mes connaissances en PHP. J'étais accompagné d'un autre stagiaire, et notre mission consistait à créer un gestionnaire de retard pour les étudiants d'une école. <br>
-                Pour cela, nous avons commencé par le DCU (document de conception d'interface utilisateur) avec StarUML, puis nous avons réalisé le MCD (modèle conceptuel de données) avec Win design, ce qui nous a grandement aidé dans la mise en place de la base de données pour le site avec MySQL. Enfin, nous avons dressé la maquette afin de passer à la phase de codage tout en respectant le modèle d'architecture MVC.
-                <br><br>
-                Tout au long de ce stage, j'ai eu l'opportunité d'utiliser différents outils de collaboration tels que Trello, Git et Discord pour communiquer avec mon équipe et suivre l'avancement du projet. Cette expérience m'a permis de développer mes compétences en gestion de projet et de travailler en équipe tout en apprenant de nouvelles technologies. 
-                <br>J'ai également pu améliorer mes compétences en maquettage, en modélisation de données, et en programmation PHP. Ce stage a été une véritable opportunité pour moi de mettre en pratique mes connaissances et de les approfondir tout en développant mes compétences professionnelles.
-                
-            </p>
+            <h1 class="hero__heading">Entreprise : <br>Groupe IPF</h1>
+            <p class="hero__info" style="font-size: medium;" >
+              À la rentrée de ma deuxième année de BTS, j'ai eu l'opportunité de réaliser un stage au sein du groupe IPF qui m'a permis d'approfondir mes connaissances en PHP. J'étais accompagné d'un autre stagiaire, et notre mission consistait à créer un gestionnaire de retard pour les étudiants du groupe.
+              Pour cela, nous avons commencé par le DCU (document de conception d'interface utilisateur) avec StarUML, puis nous avons réalisé le MCD (modèle conceptuel de données) avec Win design, ce qui nous a grandement aidé dans la mise en place de la base de données pour le site avec MySQL. Enfin, nous avons dressé la maquette afin de passer à la phase de codage tout en respectant le modèle d'architecture MVC. Nous avons utilisé l’API de la sncf navitia afin de crée une flux RSS  et de générer les billet de retard 
+              <br><br>
+              Tout au long de ce stage, j'ai eu l'opportunité d'utiliser différents outils de collaboration tels que Trello, Git et Discord pour communiquer avec mon équipe et suivre l'avancement du projet. Cette expérience m'a permis de développer mes compétences en gestion de projet et de travailler en équipe tout en apprenant de nouvelles technologies.
+              J'ai également pu améliorer mes compétences en maquettage, en modélisation de données, et en programmation PHP. Ce stage a été une véritable opportunité pour moi de mettre en pratique mes connaissances et de les approfondir tout en développant mes compétences professionnelles.
+              
+
+            </p>         
            <div class="button__wrapper">
-            <a href="https://github.com/NassimDevNum/StageDemenagement" class="btn" style=" width: 200px; background-color: #d8cbe1; color: #3f2045;">Voir Le code source</a>
+            <a href="https://github.com/NassimDevNum/Stage2022" class="btn" style=" width: 200px; background-color: #d8cbe1; color: #3f2045; margin-bottom:35px ;">Voir Le code source</a>
         </div>
           </div>
         </div>
@@ -248,11 +250,6 @@
       </div>
    </section>
 
-   <section>
-    <div style="text-align: center; padding-top:45px">
-      <img src="maquette.png"   style="width: 70%; height: auto;">
-    </div>
-  </section>
    
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
