--- a/veilles.html
+++ b/veilles.html
@@ -26,9 +26,7 @@
             <li class="nav-item">
               <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-            </li><li class="nav-item dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Projet
               </a>
@@ -114,8 +112,12 @@
 
             <h1 class="hero__heading" style="font-size: 200%;">Au-delà de la fiction : comment l'IA change notre façon de vivre et de travailler ?</h1>
             <p class="hero__info"  style="font-size: 125%;">
-              L'intelligence artificielle (IA) est de plus en plus présente dans notre vie quotidienne et professionnelle. Cette technologie révolutionnaire promet de nombreuses avancées dans différents domaines tels que la santé, l'éducation, le commerce et la sécurité. Pourtant, l'IA soulève également des questions éthiques et suscite des craintes quant à son impact sur l'emploi et la vie privée. Cette veille technologique a pour objectif de suivre l'évolution de l'IA et d'analyser son impact sur notre manière de vivre et de travailler.  </p>           
-          </div>
+              L'IA (intelligence artificielle) est une discipline scientifique qui vise à créer des machines capables d'effectuer des tâches qui nécessitent normalement l'intelligence humaine. <br><br>
+              Aujourd'hui, l'IA est utilisée dans de nombreux domaines, tels que la santé, la finance, la sécurité, l'industrie, les transports, l'éducation, etc. Les assistants vocaux, les chatbots, la création d’image, la conduite autonome sont quelques exemples d'applications concrètes de l'IA. <br><br>
+              Au cours des dernières années, l'IA a connu des avancées considérables, notamment grâce à l'utilisation de grandes quantités de données et de puissants algorithmes d'apprentissage automatique. Les systèmes d'IA sont de plus en plus performants et capables de réaliser des tâches de plus en plus complexes. Il est donc important de suivre de près les tendances et les avancées en matière d'IA, tout en étant conscients des risques associés à son développement.
+              
+            </p>
+           </div>
         </div>
         <div class="hero__right" data-aos="fade-right">
           <div class="hero__imgWrapper">
@@ -243,12 +245,12 @@
 </div>
 
 <h2 style="text-align: center;">
- Présentation des résultats et impacts de la veille  
+ Présentation de l'impacts et conclusion
 </h2>
 <div>
- <p style="font-size: 125%; padding: 0 7% 0 7%;">L'IA a eu un impact considérable sur de nombreux aspects de notre vie, de la façon dont nous communiquons aux emplois que nous occupons en passant par les produits que nous achetons et les services que nous utilisons. Elle a permis de développer des technologies et des applications qui ont permis d'améliorer la qualité de vie, de réduire les coûts, de résoudre des problèmes complexes et de prendre des décisions plus éclairées.<br> En plus d’être un véritable booste de productivité et de créativité.</p>
- <p style="font-size: 125%; padding: 0 7% 0 7%;">Cependant, l'IA a également soulevé des préoccupations quant à la protection de la vie privée, la sécurité des données, la discrimination algorithmique, le remplacement des emplois. Il est donc essentiel de continuer à surveiller les progrès de l'IA et à travailler à son développement de manière responsable et éthique afin de maximiser ses avantages tout en minimisant ses risques. 
-  <br><br> C'est pourquoi la veille sur l'IA est un outil essentiel pour suivre les avancées technologiques et les transformations en cours dans notre société. En comprenant les enjeux de l'IA et en anticipant les défis et les opportunités qu'elle pose, les entreprises et les travailleurs pourront s'adapter aux changements en cours et tirer parti de cette technologie révolutionnaire de manière responsable</p>
+ <p style="font-size: 125%; padding: 0 7% 0 7%;">En conclusion, la veille sur l'IA est un exercice important pour comprendre les avancées, les tendances et les défis dans ce domaine. Nous avons vu que l'IA est utilisée dans de nombreux notamment la génération de code et la génération d’image. Les avancées récentes en matière d'IA sont impressionnantes, mais elles soulèvent également des préoccupations et des enjeux liés à la responsabilité, l'éthique et la sécurité. <br><br>
+Les implications et les impacts potentiels de l'IA sur la société, l'économie, l'emploi, l'éthique, etc. sont considérables. Il est important que les entreprises et les décideurs politiques explorent les avantages et les risques de l'IA et prennent des mesures pour promouvoir une utilisation responsable et éthique de cette technologie. <br><br>
+ Enfin, la veille sur l'IA peut également servir de point de départ pour de nouvelles recherches et de nouvelles questions à explorer dans le futur. Comment pouvons-nous utiliser l'IA pour résoudre des problèmes sociaux et environnementaux complexes ? Comment pouvons-nous garantir la transparence et la responsabilité dans l'utilisation de l'IA ? Ce sont des questions clés qui méritent d'être explorées à l'avenir. En somme, la veille sur l'IA doit être considérée comme une opportunité pour comprendre et exploiter cette technologie en toute responsabilité et éthique.</p>
 </div>
 <div style=" display: flex;justify-content: center;align-items: center; width: 100;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/cR6VepNl1Lc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
