--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           <li class="nav-item">
             <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-          </li><li class="nav-item dropdown">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Projet
             </a>
@@ -125,7 +123,7 @@
             </p>
             <div class="button__wrapper" style="padding-bottom: 35px;">
               <a href="LahlouhNassimCvAlt.DOCX" download="LahlouhNassimCvAlt" class="btn">Télécharger CV</a>
-              <a href="../html/projet.html" class="btn">Voir Les Projets</a>
+              <a href="projA1.html" class="btn">Voir Les Projets</a>
             </div>
           </div>
         </div>
