--- a/projA1.html
+++ b/projA1.html
@@ -27,9 +27,7 @@
             <li class="nav-item">
               <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-            </li><li class="nav-item dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Projet
               </a>
@@ -265,13 +263,12 @@
 
           <div class="hero__left__wrapper">
             <h1 class="hero__heading" style="color: #3f2045;">Projet 3 :<br>Forum</h1>
-            <p class="hero__info" style="font-size: medium; color: #3f2045;">
-              Pour mon second projet je devais l’effectuer en équipe cela consistait à développer un forum web en utilisant le langage appris en cours qui était le PHP. Bien que la méthode de conception MVC (Model-View-Controller) n’était pas obliger nous avons essayé tout de même de le réaliser ne MVC. L'objectif était de créer une plateforme permettant aux utilisateurs de discuter et d'échanger sur divers sujets avec des topics et des commentaires. <br><br>
-              Pour réaliser ce projet, j'ai utilisé Git et GitHub pour gérer le code source et permettre une collaboration efficace avec l'équipe de développement. Nous avons également utilisé Discord pour communiquer en temps réel et partager notre travail. <br><br>
-              La méthode MVC était nouvelle pour moi, mais j'ai rapidement compris son fonctionnement et son utilité dans le développement web. La conception MVC permet de séparer la logique de traitement des données (le modèle), de la présentation des données (la vue), et de la gestion des événements (le contrôleur), ce qui facilite la maintenance et la mise à jour du code. <br><br>
-              Nous avons également utilisé MySQL pour stocker les données. Nous avons mis en place des fonctionnalités telles que la création de compte, la connexion, compte admin, utilisateur, la création de topics de discussion, et la possibilité de commenter les messages des autres utilisateurs.Notre projet comporte également des bases de cybersécurité comme le stockage des MDP qui est crypté ou des régex qui filtre la manipulation de texte. <br><br>
-              Ce projet m'a permis de renforcer mes compétences en PHP, de découvrir la méthode de conception MVC, et de travailler en équipe en utilisant des outils de collaboration modernes. J'ai également appris l'importance de la planification et de l'organisation pour mener à bien un projet de développement web.
-              
+            <p class="hero__info" style="font-size: medium; color: #3f2045;">Pour mon second projet en dev je devais un forum web en utilisant les langages appris en cours qui était HTML, CSS, PHP. L'objectif était de créer une plateforme permettant aux utilisateurs de discuter et d'échanger sur divers sujets avec des topics et des commentaires. <br><br>
+
+              Nous avons également utilisé MySQL pour stocker les informations dans la base de données. Nous avons mis en place des fonctionnalités telles que la création de compte, la connexion, compte admin, utilisateur, la création de topics de discussion, et la possibilité de commenter les messages des autres utilisateurs. Notre projet comporte également des bases de cybersécurité comme le stockage des MDP qui sont crypté ou des régex qui filtre la manipulation de texte. <br><br>
+ 
+               Ce projet m'a permis de renforcer mes compétences en PHP et les requêtes SQL. J'ai également appris l'importance de la planification et de l'organisation pour mener à bien un projet de développement web.
+ 
             </p>
             <div class="button__wrapper" style="padding-bottom: 35px;">
               <a href="https://github.com/NassimDevNum/appMeteo" class="btn" target="_blank" style=" width: 200px; background-color: #3f2045; color: #d8cbe1;">Code source</a>
