--- a/projA2.html
+++ b/projA2.html
@@ -28,9 +28,7 @@
             <li class="nav-item">
               <a class="nav-link" href="parcours.html" target="blank">Parcours</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ecole.html" target="blank">Ecole</a>
-            </li><li class="nav-item dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Projet
               </a>
