--- a/stages.html
+++ b/stages.html
@@ -132,6 +132,8 @@ Ces compétences acquises lors de ce stage ont été précieuses pour la suite d
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
              
               </div>
               <div class="carousel-inner">
@@ -157,6 +159,18 @@ Ces compétences acquises lors de ce stage ont été précieuses pour la suite d
                   <img src="stage1p4.PNG" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Leçon</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="oldTRD.PNG" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>HOME</h5>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="oldTRD2.PNG" class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>SERVICES</h5>
                   </div>
                 </div>
               </div>
